--- a/wp/wp-content/themes/wfn2017/css/page.css
+++ b/wp/wp-content/themes/wfn2017/css/page.css
@@ -210,12 +210,13 @@
 }
 #main .section-inner table th,
 #main .section-inner table td {
+  font-weight: bold;
+  text-align: left;
   color: #ea5514;
   border: 2px solid #ea5514;
   padding: 15px;
 }
 #main .section-inner table th {
-  font-weight: bold;
   background: #F7F8F8;
   min-width: 100px;
 }
@@ -228,9 +229,11 @@
   text-align: center;
   min-width: 250px;
   border-radius: 5px;
+  text-decoration: none;
 }
 #main .section-inner .bt:hover {
   background: rgba(234, 85, 20, 0.8);
+  text-decoration: none;
 }
 #main.archive .page-title {
   margin-top: 30px;
