--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -127,17 +127,17 @@
 	.section-inner {
 		
 		h2,h3,h4,h5,h6 {
+			font-size: $fs-20;
 			margin-top: 40px;
 			margin-bottom: 20px;
 		}
 		
 		h3,h4,h5,h6 {
-			padding: 5px 10px;
+			padding: 10px;
 			color: $primaryColor;
 		}
 		
 		h2 {
-			padding: 15px 10px;
 			background: $primaryColor;
 			color: #fff;
 		}
@@ -188,6 +188,8 @@
 			min-width: 100px;
 		}
 		.bt {
+			font-size: $fs-20;
+			font-weight: bold;
 			margin: 20px 0;
 			color: #fff;
 			background: $primaryColor;
