--- a/wp/wp-content/themes/wfn2017/css/page.css
+++ b/wp/wp-content/themes/wfn2017/css/page.css
@@ -169,15 +169,15 @@
   margin-bottom: 50px;
 }
 #main .section-inner h2, #main .section-inner h3, #main .section-inner h4, #main .section-inner h5, #main .section-inner h6 {
+  font-size: 1.43rem;
   margin-top: 40px;
   margin-bottom: 20px;
 }
 #main .section-inner h3, #main .section-inner h4, #main .section-inner h5, #main .section-inner h6 {
-  padding: 5px 10px;
+  padding: 10px;
   color: #ea5514;
 }
 #main .section-inner h2 {
-  padding: 15px 10px;
   background: #ea5514;
   color: #fff;
 }
@@ -221,6 +221,8 @@
   min-width: 100px;
 }
 #main .section-inner .bt {
+  font-size: 1.43rem;
+  font-weight: bold;
   margin: 20px 0;
   color: #fff;
   background: #ea5514;
