h2フォント調整

--- a/wp/wp-content/themes/wfn2017/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/home.scss
@@ -159,6 +159,7 @@ header {
 	  font-size: 5rem;
     font-family: 'Pocket-Calculator';
     color: $headlineColor;
+    font-weight: normal;
   }
 	
 	
