--- a/wp/wp-content/themes/wfn2017/css/home.css
+++ b/wp/wp-content/themes/wfn2017/css/home.css
@@ -153,6 +153,7 @@ header .bxslider li img {
   font-size: 5rem;
   font-family: 'Pocket-Calculator';
   color: #e85524;
+  font-weight: normal;
 }
 
 .section-inner h3 {
