--- a/wp/wp-content/themes/wfn2017/css/page.css
+++ b/wp/wp-content/themes/wfn2017/css/page.css
@@ -95,20 +95,10 @@
   width: 100%;
   max-width: 1000px;
   margin: auto;
-  /*
-  	.section {
-  		
-  		&:nth-child(odd) {
-  			
-  			background: #fff;
-  			
-  		}
-  		
-  		&:nth-child(even) {
-  			background: $bgColor;
-  		}
-  	} // .section
-  */
+}
+
+#primary.content-area {
+  margin-top: 40px;
 }
 
 #secondary {
@@ -193,7 +183,7 @@
   padding: 0 10px;
 }
 #main .section-inner h6 {
-  padding: 5px 0;
+  padding: 0;
 }
 #main .section-inner hr {
   border-top: 1px solid rgba(234, 85, 20, 0.6);
