--- a/wp/wp-content/themes/wfn2017/css/sidebar.css
+++ b/wp/wp-content/themes/wfn2017/css/sidebar.css
@@ -31,7 +31,7 @@
   padding: 0;
 }
 .sidebar ul li.current_page_item a {
-  background-color: rgba(234, 85, 20, 0.6);
+  background-color: #f7baa0;
 }
 .sidebar ul li a {
   display: block;
@@ -41,13 +41,14 @@
   color: #2d2d2d;
 }
 .sidebar ul li a:hover {
-  background-color: rgba(234, 85, 20, 0.6);
+  background-color: #f7baa0;
   color: #2d2d2d;
   text-decoration: none;
 }
 .sidebar ul li a:before {
   content: "\f0da";
   font-family: FontAwesome;
+  color: #ea5514;
   font-size: 20px;
   position: absolute;
   left: 10px;
