--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -116,6 +116,7 @@
 	.section-inner {
 		
 		h2,h3,h4,h5,h6 {
+			font-family: "じゅん 34", "Jun 34";
 			font-size: $fs-20;
 			padding: 10px;
 			margin-top: 40px;
