--- a/wp/wp-content/themes/wfn2017/css/sidebar.css
+++ b/wp/wp-content/themes/wfn2017/css/sidebar.css
@@ -31,7 +31,7 @@
   padding: 0;
 }
 .sidebar ul li.current_page_item a {
-  background-color: #f7baa0;
+  background-color: #f9cbb8;
 }
 .sidebar ul li a {
   display: block;
@@ -41,7 +41,7 @@
   color: #2d2d2d;
 }
 .sidebar ul li a:hover {
-  background-color: #f7baa0;
+  background-color: #f9cbb8;
   color: #2d2d2d;
   text-decoration: none;
 }
