--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -72,6 +72,8 @@
 #main {
 	
 	.page-title {
+		font-size: $fs-26;
+		font-family: "じゅん 34", "Jun 34";
 		padding: 25px 10px 25px;
 		color: $primaryColor;
 		display: -webkit-box;
