--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -32,6 +32,7 @@
 		img {
 			width: 70%;
 			height: auto;
+			max-height: 300px;
 		}
 	}
 	
@@ -168,13 +169,16 @@
 			margin: 20px 0;
 			width: 100%;
 		}
+		table p {
+			margin-bottom: 0;
+		}
 		table th,
 		table td {
 			font-weight: bold;
 			text-align: left;
 			color: $primaryColor;
 			border: 2px solid $primaryColor;
-			padding: 15px;
+			padding: 10px;
 		}
 		table th {
 			background: #F7F8F8;
