下層ページのワプー消去。

--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -399,7 +399,21 @@
 }
 
 @media screen and ( max-width: 767px ) {
-	
+    
+    header {
+        
+        .imdesc{
+    
+            .headerLeft{
+                display: none;
+            }
+            
+            .headerRight{
+                display: none;
+            }
+        }
+    }
+    
 	.site-header {
 		height: auto;
 		background-position: center top;
