--- a/wp/wp-content/themes/wfn2017/css/page.css
+++ b/wp/wp-content/themes/wfn2017/css/page.css
@@ -39,6 +39,10 @@
 
 .site-header .page-title span { font-size: 1.14rem; color: #777; }
 
+.site-header .imdesc .headerLeft { display: none; }
+
+.site-header .imdesc .headerRight { display: none; }
+
 #primary { width: 100%; max-width: 1000px; margin: auto; }
 
 #primary.content-area { margin-top: 40px; }
@@ -151,9 +155,7 @@
 
 #entry #main .tix-column-remaining { display: none; }
 
-@media screen and (max-width: 767px) { header .imdesc .headerLeft { display: none; }
-  header .imdesc .headerRight { display: none; }
-  .site-header { height: auto; background-position: center top; }
+@media screen and (max-width: 767px) { .site-header { height: auto; background-position: center top; }
   .site-header .main-image { height: auto; margin-top: 40px; }
   .site-header #signboard { position: relative; width: 100%; height: auto; padding: 55px 30px 45px; background-size: 100% auto; background-position: center bottom; }
   .site-header #signboard .site-title { margin-bottom: 10px; }
