スタイル修正。

--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -5,7 +5,7 @@
 
 
 .site-header {
-	height: 415px;
+	//height: 415px;
 	background: url(../images/common/bg-header.png) center center repeat-x;
 	
 	.main-image {
