--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -416,7 +416,8 @@
 		
 		.main-image {
 			height: auto;
-			margin-top: 40px;
+			//margin-top: 40px;
+			padding-bottom: 20px;
 		}
 		
 		#signboard {
