--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -417,7 +417,10 @@
 		.main-image {
 			height: auto;
 			//margin-top: 40px;
-			padding-bottom: 20px;
+			
+			.site-branding {
+    			overflow: auto;
+			}
 		}
 		
 		#signboard {
