--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -413,6 +413,7 @@
 	.site-header {
 		height: auto;
 		background-position: center top;
+		background-size: cover;
 		
 		.main-image {
 			height: auto;
