--- a/wp/wp-content/themes/wfn2017/css/page.css
+++ b/wp/wp-content/themes/wfn2017/css/page.css
@@ -155,7 +155,7 @@
 
 #entry #main .tix-column-remaining { display: none; }
 
-@media screen and (max-width: 767px) { .site-header { height: auto; background-position: center top; }
+@media screen and (max-width: 767px) { .site-header { height: auto; background-position: center top; background-size: cover; }
   .site-header .main-image { height: auto; }
   .site-header .main-image .site-branding { overflow: auto; }
   .site-header #signboard { position: relative; width: 100%; height: auto; padding: 55px 30px 45px; background-size: 100% auto; background-position: center bottom; }
