--- a/wp/wp-content/themes/wfn2017/SCSS/supporter.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/supporter.scss
@@ -36,7 +36,8 @@
 		
 		.no-image {
 			display: table;
-			width: 305px;
+			//width: 305px;
+			width: 100%;
 			height: 150px;
 			background: #f0f0f0;
 			
