下層ページのヘッダーの背景とスタイルを修正

--- a/wp/wp-content/themes/wfn2017/SCSS/page.scss
+++ b/wp/wp-content/themes/wfn2017/SCSS/page.scss
@@ -6,12 +6,13 @@
 
 .site-header {
 	//height: 415px;
-	background: url(../images/common/bg-header.png) center center repeat-x;
+	background: url(../images/common/bg-sub-header.png) center center repeat-x;
 	
 	.main-image {
 		position: relative;
-		height: 357px;
+// 		height: 357px;
 		padding-top: 30px;
+		padding-bottom: 10px;
 	}
 	
 	#signboard {
@@ -28,9 +29,9 @@
 	
 	.site-title {
 		width: 100%;
-		
+		margin: 0;
 		img {
-			width: 70%;
+// 			width: 70%;
 			height: auto;
 			max-height: 300px;
 		}
