--- a/wp/wp-content/themes/wfn2017_dev/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017_dev/SCSS/base.scss
@@ -64,7 +64,7 @@ ul {
 table {
 	
 	width: 100%;
-	
+	/*
 	th,
 	td {
 		padding: 10px;
@@ -76,6 +76,21 @@ table {
 	th {
 		text-align: center;
 	}
+    */
+    
+    table th,
+    table td {
+        font-weight: bold;
+        text-align: left;
+        color: $primaryColor;
+        border: 2px solid $primaryColor;
+        padding: 10px;
+    }
+    table th {
+        background: #F7F8F8;
+        min-width: 100px;
+    }
+
 }
 
 #page {
