--- a/wp/wp-content/themes/wfn2017_dev/css/base.css
+++ b/wp/wp-content/themes/wfn2017_dev/css/base.css
@@ -2,377 +2,101 @@
 /* サイズ */
 /* フォントサイズ */
 /* カラー */
-html,
-body {
-  width: 100%;
-  height: auto;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  font-size: 14px;
-  font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
-  color: #2d2d2d;
-}
+html, body { width: 100%; height: auto; margin: 0; padding: 0; text-align: center; font-size: 14px; font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif; color: #2d2d2d; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0 0 20px;
-  padding: 0;
-  font-weight: bold;
-}
+h1, h2, h3, h4, h5, h6 { margin: 0 0 20px; padding: 0; font-weight: bold; }
 
-h1 {
-  text-align: center;
-  font-size: 2.14rem;
-}
+h1 { text-align: center; font-size: 2.14rem; }
 
-h2 {
-  /*
-	font-size: 5rem;
-	font-family: 'Pocket-Calculator';
-	color: $headlineColor;
-*/
-}
+h2 { /* font-size: 5rem; font-family: 'Pocket-Calculator'; color: $headlineColor; */ }
 
-ul {
-  padding-left: 2em;
-}
+ul { padding-left: 2em; }
 
-table {
-  width: 100%;
-}
+table { width: 100%; /* th, td { padding: 10px; border: 1px solid #ccc; font-weight: normal; font-size: $fs-15; } th { text-align: center; } */ }
 
-table th,
-table td {
-  padding: 10px;
-  border: 1px solid #ccc;
-  font-weight: normal;
-  font-size: 1.07rem;
-}
+table table th, table table td { font-weight: bold; text-align: left; color: #ea5514; border: 2px solid #ea5514; padding: 10px; }
 
-table th {
-  text-align: center;
-}
+table table th { background: #F7F8F8; min-width: 100px; }
 
-#page {
-  width: 100%;
-  margin: 0 auto;
-  padding: 0;
-}
+#page { width: 100%; margin: 0 auto; padding: 0; }
 
-.entry-header {
-  display: none;
-}
+.entry-header { display: none; }
 
-.tix-submit {
-  padding: 20px 0;
-  text-align: center !important;
-}
+.tix-submit { padding: 20px 0; text-align: center !important; }
 
-　
-header {
-  /*
-  .site-header .site-branding h1{
-	  margin: 0;
-  }
-*/
-  /*
-	 * ヘッダーナビゲーション
-	 */
-}
+　 header { /* .site-header .site-branding h1{ margin: 0; } */ /* ヘッダーナビゲーション */ }
 
-　
-header .site-header {
-  position: relative;
-  background: #e85524;
-}
+　 header .site-header { position: relative; background: #e85524; }
 
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
-.main-navigation {
-  background: #c11329;
-  font-size: 0.9em;
-  text-transform: uppercase;
-  line-height: 1;
-  clear: both;
-  display: block;
-  float: left;
-  width: 100%;
-}
+.main-navigation { background: #c11329; font-size: 0.9em; text-transform: uppercase; line-height: 1; clear: both; display: block; float: left; width: 100%; }
 
-.main-navigation a {
-  color: #fff;
-  height: 40px;
-  text-indent: 10px;
-  padding: 13px 0;
-  display: block;
-  text-decoration: none;
-}
+.main-navigation a { color: #fff; height: 40px; text-indent: 10px; padding: 13px 0; display: block; text-decoration: none; }
 
-.main-navigation a:hover {
-  text-decoration: none;
-  opacity: 0.5;
-}
+.main-navigation a:hover { text-decoration: none; opacity: 0.5; }
 
-.main-navigation ul {
-  list-style: none;
-  padding-left: 0;
-  display: none;
-}
+.main-navigation ul { list-style: none; padding-left: 0; display: none; }
 
-.main-navigation ul,
-.main-navigation li {
-  margin: 0;
-}
+.main-navigation ul, .main-navigation li { margin: 0; }
 
-.main-navigation li {
-  list-style: none;
-  position: relative;
-}
+.main-navigation li { list-style: none; position: relative; }
 
-/*
-.main-navigation li+li {
-  border-left:1px solid white;
-}
-*/
-.main-navigation .menu-toggle {
-  background: #c11329;
-  box-shadow: none;
-  border: 0;
-  border-radius: 0;
-  color: #fff;
-  height: 40px;
-  line-height: 40px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-shadow: none;
-  width: 40px;
-}
+/* .main-navigation li+li { border-left:1px solid white; } */
+.main-navigation .menu-toggle { background: #c11329; box-shadow: none; border: 0; border-radius: 0; color: #fff; height: 40px; line-height: 40px; overflow: hidden; padding: 0; position: absolute; top: 0; right: 0; text-shadow: none; width: 40px; }
 
-.main-navigation .menu-toggle:before {
-  content: "\f0c9";
-  display: block;
-  font-family: FontAwesome;
-  font-size: 20px;
-  margin-right: 100px;
-  text-align: center;
-  width: 100%;
-}
+.main-navigation .menu-toggle:before { content: "\f0c9"; display: block; font-family: FontAwesome; font-size: 20px; margin-right: 100px; text-align: center; width: 100%; }
 
-.main-navigation .menu-toggle:hover:before {
-  opacity: 0.5;
-}
+.main-navigation .menu-toggle:hover:before { opacity: 0.5; }
 
-.main-navigation.toggled .menu-toggle:before {
-  content: "\f00d";
-}
+.main-navigation.toggled .menu-toggle:before { content: "\f00d"; }
 
-.main-navigation.toggled ul {
-  display: block;
-}
+.main-navigation.toggled ul { display: block; }
 
-@media screen and (max-width: 37.5em) {
-  .main-navigation .navigation-menu {
-    background: #c11329;
-    padding: 0;
-    position: absolute;
-    top: 40px;
-    width: 100%;
-  }
-  .main-navigation li {
-    border-bottom: 1px solid black;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-    float: none;
-  }
-  .main-navigation li:last-child {
-    border-bottom: 0;
-    box-shadow: none;
-  }
-  .main-navigation > ul {
-    border-bottom: 1px solid black;
-  }
-  .main-navigation ul ul {
-    border-top: 1px solid black;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset;
-    float: none;
-    position: relative;
-    top: 0;
-    left: 0;
-  }
-  .main-navigation ul ul a {
-    width: 100%;
-  }
-}
+@media screen and (max-width: 37.5em) { .main-navigation .navigation-menu { background: #c11329; padding: 0; position: absolute; top: 40px; width: 100%; }
+  .main-navigation li { border-bottom: 1px solid black; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1); float: none; }
+  .main-navigation li:last-child { border-bottom: 0; box-shadow: none; }
+  .main-navigation > ul { border-bottom: 1px solid black; }
+  .main-navigation ul ul { border-top: 1px solid black; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset; float: none; position: relative; top: 0; left: 0; }
+  .main-navigation ul ul a { width: 100%; } }
 
-@media screen and (min-width: 37.5em) {
-  .menu-toggle {
-    display: none;
-  }
-  .main-navigation {
-    background: #c11329;
-  }
-  .main-navigation a:hover {
-    text-decoration: none;
-    opacity: 0.5;
-  }
-  .main-navigation .navigation-menu {
-    font-size: 0;
-  }
-  .main-navigation .navigation-menu #primary-menu {
-    text-align: center;
-  }
-  .main-navigation .navigation-menu #primary-menu > li {
-    display: inline-block;
-    font-size: 13px;
-    float: none;
-  }
-  .main-navigation .navigation-menu #primary-menu > li > a {
-    padding-right: 20px;
-    padding-left: 10px;
-    background: url(../images/navi_line.png) no-repeat right center;
-  }
-  .main-navigation .navigation-menu #primary-menu > li:hover > a {
-    background: #333;
-  }
-  .main-navigation .navigation-menu #primary-menu > li:last-child > a {
-    background-image: none;
-  }
-  .main-navigation ul ul {
-    background: #333;
-    box-shadow: none;
-    top: 40px;
-    text-align: left;
-  }
-  .main-navigation ul {
-    list-style: none;
-    display: block;
-    padding-left: 0;
-  }
-  .main-navigation ul ul a {
-    width: 230px;
-  }
-  .main-navigation ul ul li {
-    border-bottom: 1px solid black;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
-  }
-  .main-navigation ul ul li:hover a {
-    opacity: 0.5;
-  }
-}
+@media screen and (min-width: 37.5em) { .menu-toggle { display: none; }
+  .main-navigation { background: #c11329; }
+  .main-navigation a:hover { text-decoration: none; opacity: 0.5; }
+  .main-navigation .navigation-menu { font-size: 0; }
+  .main-navigation .navigation-menu #primary-menu { text-align: center; }
+  .main-navigation .navigation-menu #primary-menu > li { display: inline-block; font-size: 13px; float: none; }
+  .main-navigation .navigation-menu #primary-menu > li > a { padding-right: 20px; padding-left: 10px; background: url(../images/navi_line.png) no-repeat right center; }
+  .main-navigation .navigation-menu #primary-menu > li:hover > a { background: #333; }
+  .main-navigation .navigation-menu #primary-menu > li:last-child > a { background-image: none; }
+  .main-navigation ul ul { background: #333; box-shadow: none; top: 40px; text-align: left; }
+  .main-navigation ul { list-style: none; display: block; padding-left: 0; }
+  .main-navigation ul ul a { width: 230px; }
+  .main-navigation ul ul li { border-bottom: 1px solid black; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1); }
+  .main-navigation ul ul li:hover a { opacity: 0.5; } }
 
-/*
- * コンテンツ
- */
-#main .section-inner {
-  padding: 25px 0;
-  word-wrap: break-word;
-}
+/* コンテンツ */
+#main .section-inner { padding: 25px 0; word-wrap: break-word; }
 
-#main .button-wrapper {
-  margin: 20px 0;
-  text-align: center;
-}
+#main .button-wrapper { margin: 20px 0; text-align: center; }
 
-#main .button-wrapper a {
-  display: block;
-  width: 50%;
-  margin: 0 auto;
-  padding: 10px 15px;
-  background: #0e6939;
-  border-radius: 6px;
-  box-shadow: 0px 4px 0px rgba(14, 105, 57, 0.5);
-  color: #fff;
-  text-decoration: none;
-}
+#main .button-wrapper a { display: block; width: 50%; margin: 0 auto; padding: 10px 15px; background: #0e6939; border-radius: 6px; box-shadow: 0px 4px 0px rgba(14, 105, 57, 0.5); color: #fff; text-decoration: none; }
 
-#main .button-wrapper a:hover {
-  background: rgba(14, 105, 57, 0.6);
-  box-shadow: none;
-  color: #fff;
-  text-decoration: none;
-}
+#main .button-wrapper a:hover { background: rgba(14, 105, 57, 0.6); box-shadow: none; color: #fff; text-decoration: none; }
 
-/*
- * フッター
- */
-.copyright-wrapper {
-  padding: 10px;
-  background-color: #e85524;
-  color: #FFF;
-}
+/* フッター */
+.copyright-wrapper { padding: 10px; background-color: #e85524; color: #FFF; }
 
-.copyright-wrapper .copyright {
-  margin: 0;
-}
+.copyright-wrapper .copyright { margin: 0; }
 
-.btn {
-  -webkit-border-radius: 10;
-  -moz-border-radius: 10;
-  border-radius: 10px;
-  background: #e85524;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-  color: white;
-  font-size: 1.29rem;
-}
+.btn { -webkit-border-radius: 10; -moz-border-radius: 10; border-radius: 10px; background: #e85524; padding: 10px 20px 10px 20px; text-decoration: none; color: white; font-size: 1.29rem; }
 
-.btn:hover {
-  background: #e85524;
-  text-decoration: none;
-  color: white;
-}
+.btn:hover { background: #e85524; text-decoration: none; color: white; }
 
 /*
 // スマホ
 */
-/*
-@media screen and (max-width: 767px) {
-	
-	.site-header {
-		
-		#site-navigation {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			padding: 0;
-			background-image: none;
-			
-			.menu-bar {
-				width: 100%;
-				height: 40px;
-				margin: 0;
-				padding: 5px 10px;
-				background: $titleColor;
-				line-height: 1;
-				text-align: right;
-				
-				.menu-open {
-					width: 20px;
-					height: 20px;
-					margin: 5px;
-				}
-			}
-			
-			ul {
-				display: none;
-				width: 100%;
-				z-index: 9998;
-				border-radius: 0;
-				
-				li {
-					z-index: 9999;
-					text-align: left;
-				}
-			}
-		}
-	}
-}
-*/
+/* @media screen and (max-width: 767px) { .site-header { #site-navigation { position: absolute; top: 0; width: 100%; padding: 0; background-image: none; .menu-bar { width: 100%; height: 40px; margin: 0; padding: 5px 10px; background: $titleColor; line-height: 1; text-align: right; .menu-open { width: 20px; height: 20px; margin: 5px; } } ul { display: none; width: 100%; z-index: 9998; border-radius: 0; li { z-index: 9999; text-align: left; } } } } } */
+
+/*# sourceMappingURL=../css/base.map */
