--- a/wp/wp-content/themes/wfn2017_dev/SCSS/base.scss
+++ b/wp/wp-content/themes/wfn2017_dev/SCSS/base.scss
@@ -78,15 +78,16 @@ table {
 	}
     */
     
-    table th,
-    table td {
+    th,
+    td {
         font-weight: bold;
         text-align: left;
         color: $primaryColor;
         border: 2px solid $primaryColor;
         padding: 10px;
     }
-    table th {
+    
+    th {
         background: #F7F8F8;
         min-width: 100px;
     }
