--- a/wp/wp-content/themes/wfn2017_dev/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017_dev/SCSS/home.scss
@@ -12,7 +12,7 @@ header {
 	
 	.main-image{
   	margin: 0 auto;
-  	max-width: $titleLogoWidth;
+  	max-width: $contentWidth;
     padding: 50px 10px;
     
     
@@ -23,7 +23,7 @@ header {
       // サファリで画像が飛び出すのを修正
       .site-branding{
         img{
-          max-width: $titleLogoWidth - 20px;
+          max-width: 100%;
         }
       }
       
