--- a/wp/wp-content/themes/wfn2017_dev/SCSS/home.scss
+++ b/wp/wp-content/themes/wfn2017_dev/SCSS/home.scss
@@ -13,7 +13,7 @@ header {
 	.main-image{
   	margin: 0 auto;
   	max-width: $contentWidth;
-    padding: 50px 10px;
+    padding: 0;
     
     
     //トップ画面のワプーロゴの位置調整関係(真ん中の画像を元に位置を調整する)
